# course_work_parallel_computing

./: .gitignore  CMakeLists.txt  README.md  client.cpp  main.cpp
